css changes for image, bullet alignment fix for experience points

--- a/app/explore/styles.css
+++ b/app/explore/styles.css
@@ -45,7 +45,7 @@
   content: '';
   position: absolute;
   left: 0;
-  top: 50%;
+  top: 15%;
   width: 0;
   height: 0;
   border-top: 0.3rem solid transparent;
